fabrik/internal/engine/testdata/group_errors.txt
Group misuse: non-struct target, bad prefix.
-- go.mod --
module app

go 1.26
-- main.go --
package main

import "os"

func main() { os.Exit(run()) }
-- web/web.go --
package web

//fabrik:http:group /api
type NotAStruct int

//fabrik:http:group api
type BadPrefix struct{}

-- want/diags --
error: web/web.go:3:1: //fabrik:http:group must be on a struct type (NotAStruct is not a struct)
  help: handler structs hold the group's routes as methods
error: web/web.go:6:21: group prefix must be a non-root path starting with "/" (got "api")
  help: example: //fabrik:http:group /api
